Created a header component and styled it.

--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -3,9 +3,10 @@ $dark-blue-dark-mode-elements: hsl(209, 23%, 22%);
 $very-dark-blue-dark-mode-background: hsl(207, 26%, 17%);
 $white-dark-mode-text: hsl(0, 0%, 100%);
 
-
 // LIGHT MODE COLORS
 $very-dark-blue-light-mode-text: hsl(200, 15%, 8%);
 $dark-gray-light-mode-input: hsl(0, 0%, 52%);
 $very-light-gray-light-mode-background: hsl(0, 0%, 98%);
 $white-light-mode-elements: hsl(0, 0%, 100%);
+
+$shadow: 4px 8px 15px -9px rgba(0, 0, 0, 0.192);
