--- a/public/css/main.css
+++ b/public/css/main.css
@@ -20,6 +20,11 @@ body {
 .container {
   max-width: 1440px;
   width: 100%;
+  height: 100vh;
+  margin: 0 auto;
+  display: grid;
+  grid-template-areas: "header header" "main main" "footer footer";
+  grid-template-rows: 70px 1fr 70px;
 }
 
 .home-page {
@@ -32,6 +37,46 @@ body {
   background-color: #202c37;
   color: white;
   font-size: 1.6rem;
+}
+
+.header {
+  grid-area: header;
+  width: 100%;
+  height: 100%;
+  padding: 0 1rem;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  -webkit-box-shadow: 4px 8px 15px -9px rgba(0, 0, 0, 0.192);
+  box-shadow: 4px 8px 15px -9px rgba(0, 0, 0, 0.192);
+}
+.header__logo {
+  font-size: 2rem;
+}
+.header .light-dark-mode-toggler {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 1rem;
+  padding: 1rem 2.6rem;
+  border: none;
+  outline: none;
+  border-radius: 2rem;
+  background-color: inherit;
+  color: #858585;
+  cursor: pointer;
+  transition: box-shadow 200ms ease-in;
+}
+.header .light-dark-mode-toggler:hover {
+  -webkit-box-shadow: 4px 8px 15px -9px rgba(0, 0, 0, 0.192);
+  box-shadow: 4px 8px 15px -9px rgba(0, 0, 0, 0.192);
+}
+.header .light-dark-mode-toggler .moon-icon {
+  height: 2.5rem;
+}
+
+.footer {
+  grid-area: footer;
 }
 
 /*# sourceMappingURL=main.css.map */
