--- a/src/sass/_reset.scss
+++ b/src/sass/_reset.scss
@@ -22,6 +22,15 @@ body {
 .container {
     max-width: 1440px;
     width: 100%;
+    height: 100vh;
+    margin: 0 auto;
+
+    display: grid;
+    grid-template-areas:
+        'header header'
+        'main main'
+        'footer footer';
+    grid-template-rows: 70px 1fr 70px;
 }
 
 .home-page {
