Added the search input and filter dropdown and styled them

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -1,4 +1,7 @@
 @use 'variables';
 @use 'reset';
 @use './components/header';
+@use './components/search-box';
+@use './components/filter-search';
+@use './components/home';
 @use './components/footer';
