--- a/public/css/main.css
+++ b/public/css/main.css
@@ -27,10 +27,8 @@ body {
   grid-template-rows: 70px 1fr 70px;
 }
 
-.home-page {
-  background-color: #fafafa;
-  color: #111517;
-  font-size: 1.4rem;
+.main {
+  grid-area: main;
 }
 
 .detail-page {
@@ -73,6 +71,93 @@ body {
 }
 .header .light-dark-mode-toggler .moon-icon {
   height: 2.5rem;
+}
+
+.search-box {
+  max-width: 400px;
+  width: 95%;
+  display: flex;
+  align-items: center;
+  border: 1px solid #dddddd;
+  border-radius: 5px;
+  overflow: hidden;
+}
+.search-box .search-icon {
+  height: 2.5rem;
+  width: 1.8rem;
+  margin-left: 1rem;
+  color: #858585;
+}
+.search-box .input {
+  padding: 1.5rem 1rem;
+  flex: 1;
+  color: #858585;
+  outline: none;
+  border: none;
+}
+
+.filter-box {
+  position: relative;
+}
+.filter-box__label {
+  display: flex;
+  justify-content: space-between;
+  width: 19rem;
+  border: 1px solid #dddddd;
+  border-radius: 5px;
+  padding: 1.5rem 1rem;
+  background-color: white;
+  cursor: pointer;
+}
+.filter-box__label p {
+  font-weight: 600;
+}
+.filter-box__label .down-icon {
+  height: 2rem;
+}
+.filter-box__region-items {
+  position: absolute;
+  top: 52px;
+  left: 0;
+  width: 100%;
+  background-color: white;
+  list-style: none;
+  display: none;
+}
+.filter-box__region-items .region-item {
+  padding: 1rem;
+  font-weight: 600;
+  text-decoration: none;
+  text-transform: capitalize;
+  color: #111517;
+  cursor: pointer;
+}
+.filter-box__region-items .region-item:hover {
+  background-color: #f1f1f173;
+}
+.filter-box .show-region {
+  display: block;
+}
+
+.home {
+  padding: 4rem 1rem;
+  background-color: #fafafa;
+  color: #111517;
+  font-size: 1.4rem;
+  width: 100%;
+  height: 100%;
+}
+.home__search-and-filter-box {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+@media screen and (max-width: 690px) {
+  .home__search-and-filter-box {
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 1rem;
+  }
 }
 
 .footer {
