--- a/src/sass/_reset.scss
+++ b/src/sass/_reset.scss
@@ -33,10 +33,8 @@ body {
     grid-template-rows: 70px 1fr 70px;
 }
 
-.home-page {
-    background-color: $very-light-gray-light-mode-background;
-    color: $very-dark-blue-light-mode-text;
-    font-size: 1.4rem;
+.main {
+    grid-area: main;
 }
 
 .detail-page {
