Added search filter functionality

--- a/src/sass/_reset.scss
+++ b/src/sass/_reset.scss
@@ -19,6 +19,10 @@ body {
     font-weight: 300;
 }
 
+a {
+    text-decoration: none;
+    color: $very-dark-blue-light-mode-text;
+}
 .container {
     max-width: 1440px;
     width: 100%;
