--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -3,5 +3,6 @@
 @use './components/header';
 @use './components/search-box';
 @use './components/filter-search';
+@use './components/card';
 @use './components/home';
 @use './components/footer';
