--- a/public/css/main.css
+++ b/public/css/main.css
@@ -17,6 +17,11 @@ body {
   font-weight: 300;
 }
 
+a {
+  text-decoration: none;
+  color: #111517;
+}
+
 .container {
   max-width: 1440px;
   width: 100%;
@@ -59,7 +64,7 @@ body {
   padding: 1rem 2.6rem;
   border: none;
   outline: none;
-  border-radius: 2rem;
+  border-radius: 5px;
   background-color: inherit;
   color: #858585;
   cursor: pointer;
@@ -116,13 +121,15 @@ body {
   height: 2rem;
 }
 .filter-box__region-items {
+  display: none;
   position: absolute;
   top: 52px;
   left: 0;
   width: 100%;
   background-color: white;
   list-style: none;
-  display: none;
+  border-bottom-left-radius: 5px;
+  border-bottom-right-radius: 5px;
 }
 .filter-box__region-items .region-item {
   padding: 1rem;
@@ -137,6 +144,38 @@ body {
 }
 .filter-box .show-region {
   display: block;
+  z-index: 100;
+}
+
+.card {
+  max-width: 270px;
+  width: 95%;
+  border-radius: 1rem;
+  overflow: hidden;
+  box-shadow: 4px 8px 15px -9px rgba(0, 0, 0, 0.192);
+}
+.card__image-box {
+  position: relative;
+  height: 200px;
+}
+.card__image-box img {
+  display: block;
+  width: 100%;
+  height: 100%;
+}
+.card__contents {
+  padding: 2rem;
+  line-height: 1.7;
+}
+.card__contents .name {
+  margin-bottom: 1rem;
+}
+.card__contents .label {
+  text-transform: capitalize;
+  font-weight: 600;
+}
+.card__contents .label span {
+  font-weight: 300;
 }
 
 .home {
@@ -157,6 +196,28 @@ body {
     flex-direction: column;
     align-items: flex-start;
     gap: 1rem;
+  }
+}
+.home__country-container {
+  padding: 5rem 0;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  justify-items: center;
+  row-gap: 5rem;
+}
+@media screen and (max-width: 900px) {
+  .home__country-container {
+    grid-template-columns: repeat(3, 1fr);
+  }
+}
+@media screen and (max-width: 640px) {
+  .home__country-container {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+@media screen and (max-width: 500px) {
+  .home__country-container {
+    grid-template-columns: 1fr;
   }
 }
 
