--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -26,7 +26,7 @@
         padding: 1rem 2.6rem;
         border: none;
         outline: none;
-        border-radius: 2rem;
+        border-radius: 5px;
         background-color: inherit;
         color: $dark-gray-light-mode-input;
         cursor: pointer;
