--- a/src/sass/components/_home.scss
+++ b/src/sass/components/_home.scss
@@ -19,4 +19,22 @@
             gap: 1rem;
         }
     }
+
+    &__country-container {
+        padding: 5rem 0;
+        display: grid;
+        grid-template-columns: repeat(4, 1fr);
+        justify-items: center;
+        row-gap: 5rem;
+
+        @media screen and (max-width: 900px) {
+            grid-template-columns: repeat(3, 1fr);
+        }
+        @media screen and (max-width: 640px) {
+            grid-template-columns: repeat(2, 1fr);
+        }
+        @media screen and (max-width: 500px) {
+            grid-template-columns: 1fr;
+        }
+    }
 }
