--- a/src/sass/components/_card.scss
+++ b/src/sass/components/_card.scss
@@ -3,6 +3,7 @@
 .card {
     max-width: 270px;
     width: 95%;
+    height: 400px;
     border-radius: 1rem;
     overflow: hidden;
     box-shadow: $shadow;
