--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -10,3 +10,4 @@ $very-light-gray-light-mode-background: hsl(0, 0%, 98%);
 $white-light-mode-elements: hsl(0, 0%, 100%);
 
 $shadow: 4px 8px 15px -9px rgba(0, 0, 0, 0.192);
+$light-border: 1px solid #dddddd;
