--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -5,4 +5,5 @@
 @use './components/filter-search';
 @use './components/card';
 @use './components/home';
+@use './components/detail';
 @use './components/footer';
